--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
     <main>
       <!--Секція 1 -->
       <!--Шапка-->
+      
       <section class="hero">
         <!--Ефективні рішення для вашого бізнесу-->
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button class="hero-button" type="button">Замовити послугу</button>
       </section>
       <!--Секція 2 -->
-      <section>
+      <section class="section">
         <h2 class="visually-hidden">Особливості</h2>
         <ul>
           <li>
@@ -78,7 +79,7 @@
         </ul>
       </section>
       <!--Секція 3 -->
-      <section>
+      <section class="section">
         
         <h3 class="profile">Чим ми займаємося</h3>
         <ul>
@@ -109,7 +110,7 @@
         </ul>
       </section>
       <!--Секція 4 -->
-      <section>
+      <section  class="section">
         <h3 class="profile">Наша команда</h3>
         <ul>
           <li>
