--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,7 @@
         <main>
             <!--Секція 1 -->
             <!--Шапка-->
+            <section class="section">
             <section>
                 <h3 class="visually-hidden">Портфоліо</h3>
                  <ul>
@@ -120,6 +121,7 @@
                         </a>
                     </li>
                 </ul>
+            </section>
             </section>
         </main>
         <!--Підвал-->
