--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!--Верхня лінія-->
     <body class="page">
+      <container class="container">
     <header class="page-header">
       <a href="./index.html"><span class="firstpart-logo">Web</span><span class="secondpart-logo">Studio</span></a>
     
@@ -175,5 +176,6 @@
         </ul>
       </address>
     </footer>
+    </container>
   </body>
 </html>
