--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <button class="hero-button" type="button">Замовити послугу</button>
       </section>
       <!--Секція 2 -->
-      <section class="section">
+      <section class="section-service">
+        <div class="container"></div>
         <h2 class="visually-hidden">Особливості</h2>
         <ul>
           <li>
@@ -82,7 +83,7 @@
         </ul>
       </section>
       <!--Секція 3 -->
-      <section class="section">
+      <section class="section-work">
         
         <h3 class="profile">Чим ми займаємося</h3>
         <ul>
@@ -113,7 +114,7 @@
         </ul>
       </section>
       <!--Секція 4 -->
-      <section  class="section">
+      <section  class="section-team">
         <h3 class="profile">Наша команда</h3>
         <ul>
           <li>
@@ -157,6 +158,7 @@
             <p>UI Designer</p>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
