--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </section>
       <!--Секція 2 -->
       <section class="section-service">
-        <div class="container"></div>
+        <div class="container">
         <h2 class="visually-hidden">Особливості</h2>
         <ul>
           <li>
@@ -81,10 +81,11 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
       <!--Секція 3 -->
       <section class="section-work">
-        
+        <div class="container">
         <h3 class="profile">Чим ми займаємося</h3>
         <ul>
           <li>
@@ -112,9 +113,11 @@
             />
           </li>
         </ul>
+        </div>
       </section>
       <!--Секція 4 -->
       <section  class="section-team">
+        <div class="container">
         <h3 class="profile">Наша команда</h3>
         <ul>
           <li>
@@ -159,6 +162,7 @@
           </li>
         </ul>
         </div>
+        
       </section>
     </main>
     <footer class="footer">
