--- a/index.html
+++ b/index.html
@@ -52,30 +52,30 @@
       <section class="section-service">
         <div class="container">
         <h2 class="visually-hidden">Особливості</h2>
-        <ul>
-          <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+        <ul class="discription">
+          <li class="aside" >
+            <h3 class="subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="desc">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+          <li class="aside">
+            <h3 class="subtitle">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="desc">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
+          <li class="aside">
+            <h3 class="subtitle">ПЛАНУВАННЯ</h3>
+            <p class="desc">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+          <li class="aside">
+            <h3 class="subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="desc">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -87,8 +87,8 @@
       <section class="section-work">
         <div class="container">
         <h3 class="profile">Чим ми займаємося</h3>
-        <ul>
-          <li>
+        <ul class="employment">
+          <li class="image-work">
             <img
               src="./img/img/img_1.jpg"
               alt="Чим ми займаємося"
@@ -96,7 +96,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="image-work">
             <img
               src="./img/img/img_2.jpg"
               alt="Чим ми займаємося"
@@ -104,7 +104,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="image-work">
             <img
               src="./img/img/img_3.jpg"
               alt="Чим ми займаємося"
@@ -119,46 +119,54 @@
       <section  class="section-team">
         <div class="container">
         <h3 class="profile">Наша команда</h3>
-        <ul>
-          <li>
+        <ul class="team-employee">
+          <li class="employee-info">
             <img
               src="./img/img/img_4.jpg"
               alt="Наша команда"
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <div class="employee-card">
+               <h3 class="employee-name">Ігор Дем'яненко</h3>
+               <p class="employee-position">Product Designer</p>
+            </div>
           </li>
-          <li>
+          <li class="employee-info">
             <img
               src="./img/img/img_5.jpg"
               alt="Наша команда"
               width="270"
               height="260"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <div class="employee-card">
+               <h3 class="employee-name">Ольга Рєпіна</h3>
+               <p class="employee-position">Frontend Developer</p>
+            </div>
           </li>
-          <li>
+          <li class="employee-info">
             <img
               src="./img/img/img_6.jpg"
               alt="Наша команда"
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <div class="employee-card">
+               <h3 class="employee-name">Микола Тарасов</h3>
+               <p class="employee-position">Marketing</p>
+            </div>
           </li>
-          <li>
+          <li class="employee-info">
             <img
               src="./img/img/img_7.jpg"
               alt="Наша команда"
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <div class="employee-card">
+               <h3 class="employee-name">Михайло Єрмаков</h3>
+               <p class="employee-position">UI Designer</p>
+            </div>
           </li>
         </ul>
         </div>
