--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
             <section class="section">
             <section>
                 <h3 class="visually-hidden">Портфоліо</h3>
-                 <ul>
+                 <ul class="button-list">
                      <li><button class="button">Усі</button></li>
                      <li><button class="button">Веб-сайти</button></li>
                      <li><button class="button">Додатки</button></li>
@@ -62,7 +62,7 @@
                     <li class="gallery-item">
                         <a href="">
                              <img src="./img/img_1.jpg" alt="Технокряк" width="370" height="294">
-                                 <div>
+                                 <div class="border-box">
                                      <h3 class="gallery-title">Технокряк</h3>
                                      <p class="gallery-text">Веб-сайт</p>
                                  </div>
@@ -71,57 +71,73 @@
                     <li class="gallery-item">
                         <a href="">
                              <img src="./img/img_2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                             <h3 class="gallery-title">Постер New Orlean vs Golden Star</h3>
-                             <p class="gallery-text">Дизайн</p>
+                                 <div class="border-box">
+                                     <h3 class="gallery-title">Постер New Orlean vs Golden Star</h3>
+                                     <p class="gallery-text">Дизайн</p>
+                                 </div>
                         </a>
                     </li>
                     <li class="gallery-item">
                         <a href="">
                              <img src="./img/img_3.jpg" alt="Ресторан Seafood" width="370" height="294">
-                             <h3 class="gallery-title">Ресторан Seafood</h3>
-                             <p class="gallery-text">Додаток</p>
+                                 <div class="border-box">
+                                     <h3 class="gallery-title">Ресторан Seafood</h3>
+                                     <p class="gallery-text">Додаток</p>
+                                 </div>
                         </a>
                     </li>
                     <li class="gallery-item">
                         <a href="">
                              <img src="./img/img_4.jpg" alt="Проєкт Prime" width="370" height="294">
-                             <h3 class="gallery-title">Проєкт Prime</h3>
-                             <p class="gallery-text">Маркетинг</p>
+                                 <div class="border-box">
+                                     <h3 class="gallery-title">Проєкт Prime</h3>
+                                     <p class="gallery-text">Маркетинг</p>
+                                  </div>
                         </a>
                     </li>
                     <li class="gallery-item">
                         <a href="">
                              <img src="./img/img_5.jpg" alt="Проєкт Boxes" width="370" height="294">
-                             <h3 class="gallery-title">Проєкт Boxes</h3>
-                             <p class="gallery-text">Додаток</p>
+                                 <div class="border-box">
+                                     <h3 class="gallery-title">Проєкт Boxes</h3>
+                                     <p class="gallery-text">Додаток</p>
+                                 </div>
                         </a>
                     </li>
                     <li class="gallery-item">
                         <a href="">
                              <img src="./img/img_6.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                             <h3 class="gallery-title">Inspiration has no Borders</h3>
-                             <p class="gallery-text">Веб-сайт</p>
+                                 <div class="border-box">
+                                     <h3 class="gallery-title">Inspiration has no Borders</h3>
+                                     <p class="gallery-text">Веб-сайт</p>
+                                 </div>
                         </a>
                     </li>
                     <li class="gallery-item">
                         <a href="">
                              <img src="./img/img_7.jpg" alt="Видання Limited Edition" width="370" height="294">
-                             <h3 class="gallery-title">Видання Limited Edition</h3>
-                             <p class="gallery-text">Дизайн</p>
+                                 <div class="border-box">
+                                     <h3 class="gallery-title">Видання Limited Edition</h3>
+                                     <p class="gallery-text">Дизайн</p>
+                                 </div>
                         </a>
                     </li>
                     <li class="gallery-item">
                         <a href="">
                              <img src="./img/img_8.jpg" alt="Проєкт LAB" width="370" height="294">
-                             <h3 class="gallery-title">Проєкт LAB</h3>
-                             <p class="gallery-text">Маркетинг</p>
+                                 <div class="border-box">
+                                     <h3 class="gallery-title">Проєкт LAB</h3>
+                                     <p class="gallery-text">Маркетинг</p>
+                                 </div>
                         </a>
                     </li>
                     <li class="gallery-item">
                         <a href="">
                              <img src="./img/img_9.jpg" alt="Growing Business" width="370" height="294">
-                             <h3 class="gallery-title">Growing Business</h3>
-                             <p class="gallery-text">Додаток</p>
+                                 <div class="border-box">
+                                     <h3 class="gallery-title">Growing Business</h3>
+                                     <p class="gallery-text">Додаток</p>
+                                 </div>
                         </a>
                     </li>
                 </ul>
