--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body class="page">
     
     <header class="page-header">
-      <div class="container"></div>
+      <div class="container">
       <a href="./index.html"><span class="firstpart-logo">Web</span><span class="secondpart-logo">Studio</span></a>
     
       <!--Site-nav-->
