--- a/index.html
+++ b/index.html
@@ -18,18 +18,22 @@
     <!--Верхня лінія-->
     <body class="page">
     
-    <header class="page-header">
-      <div class="container">
+    <header class="">
+      <div class="container page-header">
+        <div>
       <a href="./index.html"><span class="firstpart-logo">Web</span><span class="secondpart-logo">Studio</span></a>
-    
+        </div>
       <!--Site-nav-->
+      <div>
       <nav>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link current">Студія</a></li>
           <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
           <li><a href="" class="link">Контакти</a></li>
         </ul>
-      </nav>
+        </nav>
+      </div>
+      <div>
       <ul class="site-info">
         <li>
           <a href="mailto:info@devstudio.com" class="link-email">info@devstudio.com</a>
@@ -38,6 +42,7 @@
           <a href="tel:+380961111111" class="link-phone">+38 096 111 11 11</a>
         </li>
       </ul>
+      </div>
       </div>
     </header>
 
@@ -86,7 +91,7 @@
         </div>
       </section>
       <!--Секція 3 -->
-      <section class="section">
+      <section class="section job">
         <div class="container">
         <h3 class="profile">Чим ми займаємося</h3>
         <ul class="employment">
