--- a/portfolio.html
+++ b/portfolio.html
@@ -18,26 +18,32 @@
 </head>
     <!--Верхня лінія-->
     <body class="page">
-    <header class="page-header">
-        <div class="container">
-        <a href="./index.html"><span class="firstpart-logo">Web</span><span class="secondpart-logo">Studio</span></a>
-        
+    <header class="">
+        <div class="container page-header">
+            <div>
+                <a href="./index.html"><span class="firstpart-logo">Web</span><span
+                        class="secondpart-logo">Studio</span></a>
+            </div>
             <!--Site-nav-->
-        <nav>
-            <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студія</a></li>
-                <li><a href="" class="link current">Портфоліо</a></li>
-                <li><a href="" class="link">Контакти</a></li>
-            </ul>
-        </nav>
-        <ul class="site-info">
-            <li>
-                <a href="mailto:info@devstudio.com"class="link-email">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111"class="link-phone">+38 096 111 11 11</a>
-            </li>
-        </ul>
+            <div>
+                <nav>
+                    <ul class="site-nav list">
+                        <li><a href="./index.html" class="link">Студія</a></li>
+                        <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+                        <li><a href="" class="link">Контакти</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div>
+                <ul class="site-info">
+                    <li>
+                        <a href="mailto:info@devstudio.com" class="link-email">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111" class="link-phone">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
 
